--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -4,18 +4,18 @@
 @import "{{ site.theme }}";
 
 h1 {
-    margin-top: 30px;
+    margin-top: 60px;
     margin-bottom: 10px;
 }
 
 blockquote {
-    border-left-color: #00AA0F;
+    border-left-color: #33CC44;
 }
 
 a {
-    color: #00AA0F;
+    color: #33CC44;
 }
 
 a:hover {
-    color: #33CC4A;
+    color: #5FEA6A;
 }
