--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -8,6 +8,11 @@ h1 {
     margin-bottom: 10px;
 }
 
+h2 {
+    margin-top: 30px;
+    margin-bottom: 10px;
+}
+
 blockquote {
     border-left-color: #33CC44;
 }
@@ -18,4 +23,13 @@ a {
 
 a:hover {
     color: #5FEA6A;
+}
+
+.header {
+    visibility: hidden;
+}
+
+.layoutTable th, td {
+    border: none !important;
+    background: transparent;
 }
