Working on user manual

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -33,7 +33,7 @@ a:hover {
     visibility: hidden;
 }
 
-.layoutTable th, td {
+.layoutTable th, .layoutTable td {
     border: none !important;
     background: transparent;
     text-align: center;
