--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -8,14 +8,22 @@ section {
 }
 
 h1 {
+    scroll-margin-top: 60px;
     margin-top: 60px;
     margin-bottom: 10px;
 }
 
+
 h2 {
+    scroll-margin-top: 30px;
     margin-top: 30px;
     margin-bottom: 10px;
 }
+
+h3, h4 {
+    scroll-margin-top: 30px;
+}
+
 
 blockquote {
     border-left-color: #33CC44;
